Added client-side code for client-server communication

--- a/WebApp/Driving_Sim.html
+++ b/WebApp/Driving_Sim.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="js/webgl-utils.js"></script>
 	<script type="text/javascript" src="js/webgl-lib-2.0.js"></script>
 	<script type="text/javascript" src="js/Canvas.js"></script>
+	<script type="text/javascript" src="js/Client.js"></script>
 	<script type="text/javascript" src="js/driving_sim.js"></script>
 </body>
 </html>
