--- a/WebApp/Driving_Sim.html
+++ b/WebApp/Driving_Sim.html
@@ -5,11 +5,24 @@
 	<title>Driving Sim</title>
 </head>
 <body>
-	<script type="text/javascript" src="js/glMatrix-0.9.5.min.js"></script>
-	<script type="text/javascript" src="js/webgl-utils.js"></script>
-	<script type="text/javascript" src="js/webgl-lib-2.0.js"></script>
+	<script type="text/javascript" src="http://www.visineat.com/js/jszip.min.js"></script>
+	<script type="text/javascript" src="http://www.visineat.com/js/visineat-file-formats-1.2.js"></script>
+	<script type="text/javascript" src="js/visineat-webgl-2.8.js"></script>
+	<script type="text/javascript" src="js/chart.min.js"></script>
+	<script type="text/javascript" src="js/three.min.js"></script>
+	<script type="text/javascript" src="js/DDSLoader.js"></script>
+	<script type="text/javascript" src="js/OBJLoader.js"></script>
+	<script type="text/javascript" src="js/MTLLoader.js"></script>
+	<script type="text/javascript" src="js/CanvasMath.js"></script>
+	<script type="text/javascript" src="js/LinePlot.js"></script>
+	<script type="text/javascript" src="js/Text.js"></script>
+	<script type="text/javascript" src="js/DDSLoader.js"></script>
+	<script type="text/javascript" src="js/DrawableObject.js"></script>
+	<script type="text/javascript" src="js/CompositeDrawable.js"></script>
+	<script type="text/javascript" src="js/DrawableList.js"></script>
 	<script type="text/javascript" src="js/Canvas.js"></script>
 	<script type="text/javascript" src="js/Client.js"></script>
-	<script type="text/javascript" src="js/driving_sim.js"></script>
+	<script type="text/javascript" src="js/Game.js"></script>
+	<script type="text/javascript" src="js/Driver.js"></script>
 </body>
 </html>
