--- a/WebApp/Driving_Sim.html
+++ b/WebApp/Driving_Sim.html
@@ -20,9 +20,11 @@
 	<script type="text/javascript" src="js/DrawableObject.js"></script>
 	<script type="text/javascript" src="js/CompositeDrawable.js"></script>
 	<script type="text/javascript" src="js/DrawableList.js"></script>
+	<script type="text/javascript" src="js/Driver.js"></script>
 	<script type="text/javascript" src="js/Canvas.js"></script>
 	<script type="text/javascript" src="js/Client.js"></script>
+	<script type="text/javascript" src="js/GameState.js"></script>
 	<script type="text/javascript" src="js/Game.js"></script>
-	<script type="text/javascript" src="js/Driver.js"></script>
+	<script type="text/javascript" src="js/driving_sim.js"></script>
 </body>
 </html>
